@@ -1,8 +1,9 @@
 Revision history for Perl extension Perl-MinimumVersion
 
-        - substr will not be checked if it is a method name (Alexandr Ciornii)
         - negative length in splice requires perl 5.5 (Alexandr Ciornii)
-        - better test and fix 3-arg open (Alexandr Ciornii)
+        - mkdir with one argument requires perl 5.6 (Alexandr Ciornii)
+        - substr will not be checked if it is a method name (Alexandr Ciornii)
+        - better tests and fix for 3-arg open (Alexandr Ciornii)
 
 1.21 Tue  24 Nov 2009
         - Add 'bytes' to 5.6 pragma (Alexandr Ciornii)
